# FootballTournamentPrediction

./: .gitignore  45a7437d-de7e-4af1-8f40-5a79b3655baa_1670280032_sim_results.csv  README.md  a5bfd07a-8c21-4ed0-b1a7-c465a4a6c5c6_1670280032_sim_results.csv  pyproject.toml  requirements.txt
data/: fifa_rankings.csv  fifa_rankings.csv~  fixtures.csv  fixtures.csv~  match_results_since_2018.csv  results.csv  teams.csv~
ftpredictor/: __init__.py
ftpredictor/data/: confederations.csv  results.csv
ftpredictor/data/mens/: competition_index.json  (+3 more)
ftpredictor/scripts/: get_most_probable_scores.py  hyperparameter_scan.py  likelihood_scan.py  metrics_scan.py  run_simulations.py
ftpredictor/src/: bpl_interface.py  data_loader.py  tournament.py  utils.py
notebooks/: DataWrangling.ipynb  LikelihoodScan.ipynb  Models.ipynb  NeutralModel.ipynb  NeutralModelWC.ipynb  Plotting some hyperparameter scans.ipynb  api_get_womens_results.py  api_parse_womens_results.py  develop_knockout_stage_partial.ipynb  develop_prediction_model.ipynb  develop_prediction_model_womens.ipynb  loss_rps_brier_metrics.ipynb  loss_rps_brier_metrics_womens.ipynb  partial_tournament.ipynb  prediction_examples.ipynb  tournament_prediction_example.ipynb  tournament_prediction_example_womens.ipynb
plots/: .Rhistory  F.csv  QF.csv  R16.csv  after_round_1.csv  after_round_1_updated.csv  after_round_2.csv  merged_1668598471_ep_2_wc_4_100000.csv  original_predictions.csv  predictions_plot.R
plots/mens_2022/: SF.csv  after_round_1_wales_iran.csv  after_round_2.csv  predictions_plot.R
plots/mens_2024/: .RData  original_predictions.csv  predictions_plot.R
plots/womens_2023/: F.csv  QF.csv  R16.csv  SF.csv  original_predictions.csv  predictions_plot.R
src/: bpl_interface.py  run_simulations.py  sim_results.csv  tournament.py  tournament.py~
src/tests/: test_tournament.py
wcpred_frontend/: package-lock.json  package.json
wcpred_frontend/src/: App.js  index.js
wcpredictor/: __init__.py
wcpredictor/api/: wcpred_app.py
wcpredictor/data/: aliases_2014.csv  aliases_2018.csv  aliases_2022.csv  aliases_2022_placeholder.csv  aliases_2023_womens.csv  competition_index.json  competition_index_womens.json  confederation_ratings.csv  confederations.csv  fifa_game_rankings.csv  fifa_game_rankings_womens.csv  fifa_rankings_womens.csv  fixtures_2014.csv  fixtures_2018.csv  fixtures_2022.csv  fixtures_2023_womens.csv  match_results_since_2018.csv  results.csv  results_womens.csv  teams.csv  teams_2018.csv  wcresults_2014.csv  wcresults_2018.csv
wcpredictor/scripts/: 436c3028-3065-437b-bb62-40282513e296_1668596139_sim_results.csv  51173fcd-f94c-4fd7-a60d-c8ed7492d0eb_1668596139_sim_results.csv  908f2ddf-f0a7-4610-a0ec-13a019a37b71_1668596139_sim_results.csv  a5dac313-ecf8-4a96-a396-951ed708a302_1668596139_sim_results.csv  ac6f2839-0ecf-41bb-b257-084a92ed2310_1668596139_sim_results.csv  c4ef1193-0287-48fb-9302-d6fef3a15f98_1668596139_sim_results.csv  f666cc86-f20f-48f5-b7fd-cc003761cd5c_1668596139_sim_results.csv  f94b84be-5fed-43d0-927e-f907b12b5309_1668596139_sim_results.csv  get_most_probable_scores.py  hyperparameter_scan.py  likelihood_scan.py  metrics_scan.py  plot_progress.py  plot_winners.py  run_simulations.py
wcpredictor/src/: bpl_interface.py  data_loader.py  plot_winners.py  tournament.py  utils.py
wcpredictor/tests/: test_predictions.py  test_tournament.py
(+17 files in other folders)
