[tool.poetry]
name = "ftpredictor"
version = "0.1.0"
description = "Using Bayesian methods to predict outcomes of international football tournaments"
authors = ["Nick Barlow", "Ryan Chan", "Jack Roberts"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
bpl = { git = "https://github.com/anguswilliams91/bpl-next" }
pandas = "^1.4.2"
matplotlib = "^3.6.0"
requests = "^2.27.1"
numpyro = "^0.12.1"
jupyter = "^1.0.0"
seaborn = "^0.12.1"
jsonpickle = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest = ">=5.2"
pytest-mock = ">=3.10.0"
black = ">=22.1.0"
flake8 = ">=5.0.4"
isort = ">=5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ftpred_run_simulations = "ftpredictor.scripts.run_simulations:main"
ftpred_forecast_evaluation = "ftpredictor.scripts.metrics_scan:main"
ftpred_scan_hyperparameters = "ftpredictor.scripts.hyperparameter_scan:main"
ftpred_plot_winners = "ftpredictor.scripts.plot_winners:main"
ftpred_plot_progress = "ftpredictor.scripts.plot_progress:main"
ftpred_show_match_predictions = "ftpredictor.scripts.get_most_probable_scores:main"

[tool.isort]
profile = "black"
